--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Why you should choose </h2>
-                     <p>making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still </p>
+                     <h2>Lorem ipsum dolor sit amet.</h2>
+                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, earum dolorum! Ut.</p>
                   </div>
                </div>
             </div>
@@ -201,24 +201,24 @@
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div id="box_ho" class="why-box">
                      <i><img src="images/why1.png" alt="#" /></i>
-                     <h3>Powerful Features</h3>
-                     <p>making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still </p>
+                     <h3>Lorem Powerful Ipsum</h3>
+                     <p>making it look like readable English. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus illum culpa tempore id esse. </p>
                   </div>
                   <a class="read_more bg" href="#">Read More</a>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div class="why-box">
                      <i><img src="images/why2.png" alt="#" /></i>
-                     <h3>Totaly Optimised</h3>
-                     <p>making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still </p>
+                     <h3>loremd Lorem ipsum dolor sit amet.</h3>
+                     <p>making it look like readable English. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus illum culpa tempore id esse. </p>
                   </div>
                   <a class="read_more bg" href="#">Read More</a>
                </div>
                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                   <div class="why-box">
                      <i><img src="images/why3.png" alt="#" /></i>
-                     <h3>Worldwide Support</h3>
-                     <p>making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still </p>
+                     <h3> Support Me</h3>
+                     <p>making it look like readable English. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus illum culpa tempore id esse. </p>
                   </div>
                   <a class="read_more bg" href="#">Read More</a>
                </div>
@@ -263,8 +263,8 @@
                <div class="row">
                   <div class="col-md-10 offset-md-1">
                      <div class="cont">
-                        <h3>Contact now</h3>
-                        <span>Free Multipurpose Responsive Landing Page 2019</span>
+                        <h3>Contact Victor Now!</h3>
+                        <br> <br>
                         <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
                            quissed do eiusmod tempor incididunt ut labore et dolore 
                            magna aliqua. Ut enim ad minim veniam, quis  
